--- a/src/Containers/Home/Home.css
+++ b/src/Containers/Home/Home.css
@@ -248,6 +248,7 @@ section {
   font-family: Coiny;
   font-size: 25px;
   box-shadow: inset 0px -4px 4px rgba(0, 0, 0, 0.25);
+  margin-bottom: 5%;
 }
 
 .partners {
