--- a/src/Containers/Contact/Contact.css
+++ b/src/Containers/Contact/Contact.css
@@ -1,16 +1,20 @@
 .contactPage {
   width: 100%;
-  height: 100vh;
+  height: auto;
   display: flex;
   flex-direction: column;
 }
 
 .contactForm {
   width: 100%;
-  height: 100%;
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.contactForm {
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
 .contactFormBox {
@@ -23,6 +27,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 .contactImage {
   height: 80%;
@@ -44,7 +50,7 @@
 
 .contactInput {
   width: 45%;
-  height: 80%;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -70,6 +76,10 @@ textarea {
   outline-style: none;
   border: none;
   border-radius: 1rem;
+  margin-bottom: 5%;
+}
+.contactMessage {
+  overflow: hidden;
 }
 
 .contactName {
@@ -86,7 +96,7 @@ textarea {
 }
 
 @media (max-width: 1300px) {
-  .contactForm {
+  .contactInput {
     margin-top: 5%;
   }
   .contactFormBox {
