--- a/src/Containers/Home/Home.css
+++ b/src/Containers/Home/Home.css
@@ -8,9 +8,11 @@ body {
   height: 100vh;
   scroll-snap-type: y mandatory;
 }
-
-section {
+.one {
   height: 100vh;
+}
+section {
+  height: auto;
   scroll-snap-align: start;
 }
 
@@ -29,6 +31,28 @@ section {
   font-family: Coiny;
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: black;
+  text-shadow: 4px 4px 1px rgba(6, 75, 224, 0.25);
+  letter-spacing: 0.03em;
+  animation: bounceTop_01 3s ease infinite;
+}
+@keyframes bounceTop_01 {
+  0%,
+  100% {
+    transform: translateY(-30px);
+  }
+  50% {
+    transform: translateY(0px);
+  }
+}
+
+@keyframes bounceLeft_01 {
+  0%,
+  100% {
+    transform: translateX(-30px);
+  }
+  50% {
+    transform: translateX(0px);
+  }
 }
 
 .subtitleMain {
@@ -91,36 +115,6 @@ section {
   background-color: #2091f9;
 }
 
-/* .coverRegisterMainTryFree {
-  margin-top: 5%;
-  align-items: center;
-  justify-content: center;
-  width: 90%;
-  display: flex;
-}
-
-.coverRegisterInputTryFree {
-  background: #ffffff;
-  border: 2px solid #e8e8e8;
-  box-sizing: border-box;
-  border-radius: 10px;
-  padding-left: 2.5%;
-  width: 60%;
-  height: 4.5rem;
-}
-
-.coverRegisterButtonTryFree {
-  margin-left: 2%;
-  width: 30%;
-  height: 4.5rem;
-  background: #2091f9;
-  border-radius: 10px;
-  border: none;
-  color: white;
-  font-weight: bold;
-  font-size: 1.25rem;
-} */
-
 .three {
   display: flex;
   flex-direction: column;
@@ -129,6 +123,7 @@ section {
 
 .titleMainSection {
   margin-top: 1%;
+  margin-bottom: 2%;
   font-size: 45px;
   display: flex;
   flex-direction: column;
@@ -156,19 +151,20 @@ section {
 
 .bodyMainSection {
   width: 100%;
-  height: 100vh;
 }
 
 .whiteSection,
 .graySection {
-  height: 50%;
   width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   gap: 5%;
+  padding-top: 3%;
+  padding-bottom: 3%;
 }
+
 .sectionImage {
   width: 30%;
   display: flex;
@@ -177,8 +173,9 @@ section {
   justify-content: center;
 }
 .sectionImage img {
-  width: 15rem;
-  height: 15rem;
+  animation: bounceLeft_01 3s ease infinite;
+  width: 100%;
+  height: auto;
 }
 
 .whiteSectionText,
@@ -188,7 +185,7 @@ section {
 
 .whiteTitle,
 .grayTitle {
-  font-size: 30px;
+  font-size: 48px;
   font-family: Coiny;
   font-weight: bold;
   letter-spacing: 0.05em;
@@ -196,10 +193,16 @@ section {
 
 .whiteParragraph,
 .grayParragraph {
-  font-size: 22px;
-  text-align: left;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 25px;
   line-height: 150%;
+  text-align: left;
   letter-spacing: 0.05em;
+
+  color: #544837;
 }
 
 .graySection {
@@ -266,7 +269,6 @@ section {
 
 .partners p {
   margin: 4% auto;
-  font-family: Open Sans;
   font-style: normal;
   font-weight: 800;
   font-size: 25px;
@@ -301,8 +303,8 @@ section {
     width: 200px;
   }
   .sectionImage img {
-    width: 15rem;
-    height: 15rem;
+    width: 25rem;
+    height: auto;
   }
 
   .whiteSectionText,
@@ -321,7 +323,7 @@ section {
   }
 
   .subtitleMain {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     width: 90%;
   }
 
@@ -346,14 +348,10 @@ section {
   .mainButton {
     width: 90%;
   }
-  .three,
-  .four,
-  .five,
-  .six {
-    height: auto;
-  }
+
   .titleMainSection {
     margin-top: 3%;
+
     text-align: center;
     font-size: 36px;
   }
@@ -382,7 +380,7 @@ section {
   .whiteParragraph,
   .grayParragraph {
     text-align: left;
-    font-size: 20px;
+    font-size: 25px;
   }
   .graySection {
     flex-direction: column;
@@ -434,14 +432,14 @@ section {
 }
 
 @media (max-width: 600px) {
-  .titleMain{
-    font-size: 42px;
+  .titleMain {
+    font-size: 46px;
   }
-  .subtitleMain{
+  .subtitleMain {
     margin-top: 1%;
-    font-size:18px;
+    font-size: 1.9rem;
   }
-  .newsletterMain p{
-    font-size:14px;
+  .newsletterMain p {
+    font-size: 14px;
   }
 }
