--- a/src/Containers/TryFree/TryFree.css
+++ b/src/Containers/TryFree/TryFree.css
@@ -6,7 +6,7 @@ body {
 .mainTryFree {
   width: 100%;
   height: auto;
-  background-color: #fafbfe;
+  background-color: #f6f7fa;
 }
 
 .coverTryFree {
