--- a/src/Components/NavBar/Navbar.css
+++ b/src/Components/NavBar/Navbar.css
@@ -1,15 +1,20 @@
-.navBar {
+nav {
   top: 0;
   left: 0;
   position: fixed;
   height: 80px;
+  width: 100%;
+  background-color: #212529;
+  z-index: 100;
+  display: flex;
+  align-items: center;
+}
+.navBar {
   width: 90%;
-  margin-left: 5%;
+  margin: auto;
   display: flex;
   flex-direction: row;
   align-items: center;
-  background: transparent;
-  z-index: 100;
 }
 a {
   text-decoration: none;
@@ -48,7 +53,7 @@ a {
 }
 .textNavBar a,
 .buttonNavBar {
-  color: #000;
+  color: #fff;
 }
 .textNavBar .active {
   color: #f9b41f;
