--- a/src/Containers/Contact/Contact.css
+++ b/src/Containers/Contact/Contact.css
@@ -3,6 +3,7 @@
   height: auto;
   display: flex;
   flex-direction: column;
+  background-color: #f6f7fa;
 }
 
 .contactForm {
@@ -19,8 +20,8 @@
 
 .contactFormBox {
   transition: 1s;
-  width: 60%;
-  height: 75%;
+  width: auto;
+  height: auto;
   background: rgba(6, 75, 224, 0.2);
   border-radius: 1rem;
   display: flex;
@@ -31,6 +32,8 @@
   margin-bottom: 5%;
 }
 .contactImage {
+  margin-top: 5%;
+  margin-bottom: 5%;
   height: 80%;
   width: 45%;
   display: flex;
@@ -82,11 +85,9 @@ textarea {
   overflow: hidden;
 }
 
-.contactName {
-  padding: 1rem;
-}
-
+.contactName,
 .contactEmail {
+  width: auto;
   padding: 1rem;
 }
 
@@ -96,9 +97,6 @@ textarea {
 }
 
 @media (max-width: 1300px) {
-  .contactInput {
-    margin-top: 5%;
-  }
   .contactFormBox {
     transition: 1s;
     width: 80%;
@@ -106,15 +104,7 @@ textarea {
   }
 }
 
-@media (max-width: 1000px) {
-  .contactFormBox {
-    transition: 1s;
-    width: 90%;
-    height: 80%;
-  }
-}
-
-@media (max-width: 850px) {
+@media (max-width: 950px) {
   .contactInput input,
   textarea {
     transition: 1s;
@@ -136,11 +126,14 @@ textarea {
     flex-direction: column;
   }
   .contactInput {
+    width: 100%;
     height: 30rem;
     transition: 1s;
-    width: 75%;
-    gap: 7%;
     margin-bottom: 10%;
+  }
+  .contactFormulario {
+    padding-right: 10%;
+    width: 75%;
   }
   .contactPage {
     transition: 1s;
