--- a/src/Containers/Home/Home.css
+++ b/src/Containers/Home/Home.css
@@ -2,22 +2,39 @@ body {
   padding: 0;
   margin: 0;
 }
+span {
+  color: #ffae00;
+  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-color: black;
+}
 
 .main {
   width: 100%;
-  height: 100vh;
   scroll-snap-type: y mandatory;
 }
 .one {
   height: 100vh;
+  width: 100%;
 }
 section {
   height: auto;
   scroll-snap-align: start;
+  background-color: #f6f7fa;
 }
-
 .one {
-  background-color: rgba(6, 75, 224, 0.2);
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  background-image: url(../../images/image2.jpg);
+  background-color: #000;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  z-index: 2;
+}
+.principal {
+  height: 100vh;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -33,7 +50,6 @@ section {
   -webkit-text-stroke-color: black;
   text-shadow: 4px 4px 1px rgba(6, 75, 224, 0.25);
   letter-spacing: 0.03em;
-  animation: bounceTop_01 3s ease infinite;
 }
 @keyframes bounceTop_01 {
   0%,
@@ -48,10 +64,10 @@ section {
 @keyframes bounceLeft_01 {
   0%,
   100% {
-    transform: translateX(-30px);
+    transform: translateY(-10px);
   }
   50% {
-    transform: translateX(0px);
+    transform: translateY(0px);
   }
 }
 
@@ -74,45 +90,26 @@ section {
   justify-content: center;
   align-items: center;
 }
-.newsletterMain p {
-  text-align: center;
-  font-weight: bolder;
-}
-
-.formMain {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-}
-.emailMain {
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-}
-.emailMain input {
-  padding: 1rem;
-  outline: none;
-  border: none;
-  border-radius: 0.5rem;
-  width: 385px;
-  height: 2rem;
-}
 
 .mainButton {
+  transition: 1s;
+  background-color: #3a5aff;
+  border: none;
+  width: 300px;
+  padding: 1.3rem;
   cursor: pointer;
-  width: 200px;
-  height: 4rem;
-  border-radius: 0.5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   color: #ffff;
   font: bold;
   font-family: Coiny;
-  background-color: #2091f9;
+  font-size: 20px;
+  box-shadow: inset 0px -4px 1px rgba(0, 0, 0, 0.25);
+  border-radius: 12px;
+  animation: bounceLeft_01 3s ease infinite;
+}
+.mainButton:hover {
+  transition: 1s;
+  -webkit-box-shadow: 0px 0px 0px 0px #1814ff;
+  box-shadow: 0px 0px 0px 0px #1814ff;
 }
 
 .three {
@@ -189,6 +186,9 @@ section {
   font-family: Coiny;
   font-weight: bold;
   letter-spacing: 0.05em;
+  color: #000;
+  text-shadow: 4px 4px 1px rgba(130, 130, 130, 0.25);
+  letter-spacing: 0.03em;
 }
 
 .whiteParragraph,
@@ -203,10 +203,16 @@ section {
   letter-spacing: 0.05em;
 
   color: #544837;
+  text-shadow: 2px 2px 1px rgba(155, 155, 155, 0.3);
 }
 
 .graySection {
-  background-color: #f6f7fa;
+  background: rgb(146, 201, 221);
+  background: linear-gradient(
+    135deg,
+    rgba(146, 201, 221, 1) 0%,
+    rgba(177, 138, 212, 0.5) 100%
+  );
 }
 
 .four {
@@ -312,11 +318,25 @@ section {
     width: 550px;
   }
 }
-
-@media (max-width: 900px) {
+@media (max-width: 1100px) {
   .one {
-    justify-content: start;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
   }
+  .principal {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .backgroundImg {
+    display: none;
+  }
+}
+@media (max-width: 900px) {
   .titleMain {
     font-size: 3rem;
     margin-top: 50%;
@@ -327,26 +347,9 @@ section {
     width: 90%;
   }
 
-  .newsletterMain {
-    position: absolute;
-    bottom: 5%;
-  }
-  .newsletterMain p {
-    text-align: center;
-    width: 90%;
-    font-size: 20px;
-    font-weight: bolder;
-  }
-  .formMain {
-    flex-direction: column;
-    width: 100%;
-  }
-  .emailMain input {
-    width: 90%;
-  }
-  .emailMain,
   .mainButton {
     width: 90%;
+    margin-top: 25%;
   }
 
   .titleMainSection {
@@ -438,8 +441,5 @@ section {
   .subtitleMain {
     margin-top: 1%;
     font-size: 1.9rem;
-  }
-  .newsletterMain p {
-    font-size: 14px;
   }
 }
