--- a/src/Containers/Home/Home.css
+++ b/src/Containers/Home/Home.css
@@ -163,7 +163,7 @@ section {
 }
 
 .sectionImage {
-  width: 30%;
+  width: 35%;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -171,13 +171,12 @@ section {
 }
 .sectionImage img {
   animation: bounceLeft_01 3s ease infinite;
-  width: 100%;
-  height: auto;
+  max-width: 100%;
 }
 
 .whiteSectionText,
 .graySectionText {
-  width: 35%;
+  width: 40%;
 }
 
 .whiteTitle,
@@ -304,10 +303,20 @@ section {
   width: 250px;
 }
 
+.mockup8 {
+  width: 250px;
+}
+
 @media (max-width: 1300px) {
   .sectionImage {
-    width: 200px;
+    width: 35%;
   }
+
+  .whiteTitle,
+  .grayTitle {
+    font-size: 36px;
+  }
+
   .sectionImage img {
     width: 25rem;
     height: auto;
@@ -316,6 +325,10 @@ section {
   .whiteSectionText,
   .graySectionText {
     width: 550px;
+  }
+  .sectionImage .mockup8 {
+    margin-top: 5%;
+    width: 200px;
   }
 }
 @media (max-width: 1100px) {
@@ -376,10 +389,10 @@ section {
     margin-top: 5%;
     margin-bottom: 10%;
   }
-  .whiteSectionImage img {
-    width: 8rem;
-    height: 8rem;
+  .sectionImage img {
+    max-width: 90%;
   }
+
   .whiteParragraph,
   .grayParragraph {
     text-align: left;
@@ -393,17 +406,20 @@ section {
     height: auto;
   }
   .sectionImage {
-    width: 100%;
+    width: 90%;
+  }
+  .sectionImage .mockup8 {
+    width: 60%;
+  }
+  .sectionImage .mockup2,
+  .mockup8 {
+    margin-left: 10%;
   }
 
   .whiteSectionText,
   .graySectionText {
     width: 100%;
     margin: 10% auto;
-  }
-  .graySectionImage img {
-    width: 8rem;
-    height: 8rem;
   }
 
   .graySectionText,
@@ -429,17 +445,17 @@ section {
     height: auto;
     margin-bottom: 20%;
   }
-  .holded {
-    margin-right: 8%;
-  }
-}
-
-@media (max-width: 600px) {
-  .titleMain {
+  .hold.titleMain {
     font-size: 46px;
   }
   .subtitleMain {
     margin-top: 1%;
     font-size: 1.9rem;
   }
+  ed {
+    margin-right: 8%;
+  }
+}
+
+@media (max-width: 600px) {
 }
